--- a/css/styles.css
+++ b/css/styles.css
@@ -46,8 +46,11 @@ main {
   font-weight: 500;
 }
 
+body.index-page .hero {
+  background: url('../images/hero-bg.jpg') no-repeat center 70% / cover;
+}
+
 .hero {
-  background: url('../images/hero-bg.jpg') no-repeat center center / cover;
   min-height: 60vh;
   text-align: center;
   padding: 6rem 2rem;
@@ -57,6 +60,7 @@ main {
   align-items: center;
   color: white;
 }
+
 
 .hero h1 {
   font-size: 3rem;
