--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,7 @@ main {
 }
 
 body.index-page .hero {
-  background: url('../images/hero-bg.jpg') no-repeat center 95% / cover;
+  background: url('../images/hero-bg-v2.jpg') no-repeat center 95% / cover;
 }
 
 .hero {
